Spec: Use <ins> on titles of new clauses
As recommended by @domenic as reminders during integration into
original spec.

--- a/spec.html
+++ b/spec.html
@@ -21,7 +21,7 @@ contributors: J. S. Choi
 <h1>Lexical Environments</h1>
 
 <emu-clause id="sec-lexical-topics">
-<h1>Lexical Topics</h1>
+<h1><ins>Lexical Topics</ins></h1>
 
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-lexical-environments>original Lexical Environments clause</a>.</p>
@@ -162,7 +162,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 <p>The behaviour of the concrete <ins>and additional</ins> specification methods for declarative Environment Records is defined by the following algorithms.</p>
 
 <emu-clause id="sec-declarative-environment-records-hastopic">
-<h1>HasTopic ( )</h1>
+<h1><ins>HasTopic ( )</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
 </emu-note>
@@ -175,7 +175,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 </emu-clause>
 
 <emu-clause id="sec-declarative-environment-records-gettopicbinding">
-<h1>GetTopicBinding ( )</h1>
+<h1><ins>GetTopicBinding ( )</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
 </emu-note>
@@ -191,7 +191,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 </emu-clause>
 
 <emu-clause id="sec-declarative-environment-records-bindtopicvalue">
-<h1>BindTopicValue ( )</h1>
+<h1><ins>BindTopicValue ( )</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
 </emu-note>
@@ -210,7 +210,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 <h1>Object Environment Records</h1>
 
 <emu-clause id="sec-object-environment-records-hastopic">
-<h1>HasTopic ( )</h1>
+<h1><ins>HasTopic ( )</ins></h1>
 
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-object-environment-records>original Object Environment Records clause</a>.</p>
@@ -229,7 +229,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 <h1>Global Environment Records</h1>
 
 <emu-clause id="sec-global-environment-records-hastopic">
-<h1>HasTopic ( )</h1>
+<h1><ins>HasTopic ( )</ins></h1>
 
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-object-environment-records>original Global Environment Records clause</a>.</p>
@@ -305,7 +305,7 @@ PrimaryExpression[Yield, Await] :
 </emu-grammar>
 
 <emu-clause id="sec-topic-reference">
-<h1>The Topic Reference `#`</h1>
+<h1><ins>The Topic Reference `#`</h1>
 
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause to be inserted between the <a href=https://tc39.github.io/ecma262/#sec-this-keyword>original `this` Keyword clause</a> and the <a href=https://tc39.github.io/ecma262/#sec-identifier-reference>original Identifier Reference clause</a>.</p>
@@ -372,12 +372,12 @@ PrimaryExpression[Yield, Await] :
 </ins>
 </emu-clause>
 
+<emu-clause id=sec-pipeline-operator>
+<h1><ins>Pipeline Operator</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause to be inserted between the <a href=https://tc39.github.io/ecma262/#sec-conditional-operator>original Conditional Operator (`?` `:`) clause</a> and the <a href=https://tc39.github.io/ecma262/#sec-assignment-operators>original Assignment Operators clause</a>.</p>
 </emu-note>
 
-<emu-clause id=sec-pipeline-operator>
-<h1>Pipeline Operator</h1>
 <h2>Syntax</h2>
 <emu-grammar type=definition>
 PipelineExpression[In, Yield, Await] :
