Spec § Environment Records: Corrected sub-clause nesting

--- a/spec.html
+++ b/spec.html
@@ -204,6 +204,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 4. Return NormalCompletion(~empty~).
 </emu-alg>
 </emu-clause>
+</emu-clause>
 
 <!-- es6num="8.1.1.2" -->
 <emu-clause id="sec-object-environment-records">
