Spec § Introduction: Link to Ecma262 and put in editor’s note

--- a/spec.html
+++ b/spec.html
@@ -11,7 +11,9 @@ contributors: J. S. Choi
 
 <emu-intro id=introduction>
 <h1>Introduction</h1>
-<p>This is the formal specification for a proposed "smart pipeline operator" <code>|&gt;</code> in JavaScript. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
+<emu-note type=editor>
+<p>This is the formal specification for a proposed "smart pipeline operator" <code>|&gt;</code> in JavaScript. It modifies the original <a href=https://tc39.github.io/ecma262/>ECMAScript specification</a> with several new or revised clauses. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
+</emu-note>
 </emu-intro>
 
 <emu-clause id=executable-code-and-execution-contexts>
