Spec § Block: Inserted missing <ins>

--- a/spec.html
+++ b/spec.html
@@ -543,6 +543,7 @@ AssignmentExpression[In, Yield, Await] :
 <p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-block-static-semantics-early-errors>original Block, Static Semantics: Early Errors clause</a>.</p>
 </emu-note>
 
+<ins class=block>
 <emu-grammar>BlockStatement : Block</emu-grammar>
 <ul>
 <li>
