Spec: Minor formatting typos

--- a/spec.html
+++ b/spec.html
@@ -455,7 +455,7 @@ With parameter _symbol_.
 <emu-note>
 <p>This abstract operation constructs, instantiates, then returns a new declarative Lexical Environment for a topic pipeline body. It creates an immutable topic binding in that declarative environment using the given _topic_.</p>
 </emu-note>
-<p>Topic Pipeline Instantiation is performed as follows using arguments code, env, and topic.</p>
+<p>Topic Pipeline Instantiation is performed as follows using arguments _code_, _env_, and _topic_.</p>
 <ul>
 <li>_topic_ is the value to which _env_'s topic reference will be bound.</li>
 <li>_env_ is the Lexical Environment in which the topic binding is to be created.</li>
@@ -805,7 +805,7 @@ Finally : `finally` Block</emu-grammar>
 </emu-alg>
 
 <emu-note>
-Normally, Contains does not look inside most function forms. However, Contains is used to detect `new.target`, <ins>`this`, `super`, and `#`</ins> usage within an ArrowFunction.
+Normally, Contains does not look inside most function forms. However, Contains is used to detect `new.target`, <ins>`this`, `super`, and `#`</ins> usage within an |ArrowFunction|.
 </emu-note>
 
 </emu-clause>
