Spec § Topic Reference: Remove “The” for spec consistency

--- a/spec.html
+++ b/spec.html
@@ -315,7 +315,7 @@ PrimaryExpression[Yield, Await] :
 </emu-grammar>
 
 <emu-clause id=sec-topic-references>
-<h1><ins>The Topic Reference `#`</ins></h1>
+<h1><ins>Topic Reference</ins></h1>
 
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause to be inserted between the <a href=https://tc39.github.io/ecma262/#sec-this-keyword>original `this` Keyword clause</a> and the <a href=https://tc39.github.io/ecma262/#sec-identifier-reference>original Identifier Reference clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-mt-topic-references>further modifications by Additional Feature MT</emu-xref>.</p>
@@ -1549,7 +1549,7 @@ PrimaryExpression[Yield, Await] :
 </emu-grammar>
 
 <emu-annex id=sec-additional-feature-mt-topic-references>
-<h1>The Topic Reference<ins>s</ins> `#`<ins>, `##`, `###`, and `...`</ins></h1>
+<h1>Topic Reference<ins>s</ins></h1>
 
 <emu-note type=editor>
 <p>This section revises the <emu-xref href=#sec-topic-references>new clause in the core proposal</emu-xref>.</p>
